<resources>
    <string name="app_name">QuizApp</string>
    <string name="start_quiz">START QUIZ</string>
    <string name="what_is_blah_blah">What is blah + blah?</string>
    <string name="option_1">Option 1</string>
    <string name="next">Next</string>
    <string name="_1_5">1/5</string>

    <string name="submit">Submit</string>
    <string name="numbersOfQuestion">/5</string>
    <string name="total_score_6">Total Score : </string>
    <string name="restart">Restart</string>
</resources>