<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start_quiz"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:background="@drawable/btn_background"
        android:padding="20dp"
        android:textColor="#FFFFFF"
        />

    <TextView
        android:id="@+id/totalscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_score_6"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalscore"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/restart"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/btn_background"
        android:padding="20dp"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardMaxElevation="10dp"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="visible"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/number_of_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_5"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/what_is_blah_blah"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <RadioButton
                    android:id="@+id/opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_1"
                    android:textSize="18sp"
                    />
                <RadioButton
                    android:id="@+id/opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_1"
                    android:textSize="18sp"
                    />
                <RadioButton
                    android:id="@+id/opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_1"
                    android:textSize="18sp"
                    />
                <RadioButton
                    android:id="@+id/opt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_1"
                    android:textSize="18sp"
                    />
            </RadioGroup>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_background"
                android:padding="0dp"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>